examples/test/testpolicy15625.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15625
  namespace: namespace295
spec:
  podSelector:
    matchLabels:
      key34: value38
      key36: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value35
          key34: value10
          key14: value40
      podSelector:
        matchLabels:
          key35: value37
          key24: value41
          key14: value17
